_generated-doc/2.7/config/quarkus-oidc-oidc-build-time-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-build-time-config_configuration]]link:#quarkus-oidc-oidc-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.enabled]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.enabled[quarkus.oidc.enabled]`

[.description]
--
If the OIDC extension is enabled.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type[quarkus.oidc.devui.grant.type]`

[.description]
--
Grant type which will be used to acquire a token to test the OIDC 'service' applications
--|`client`, `password`, `code`, `implicit` 
|


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-clien-timeout]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-clien-timeout[quarkus.oidc.devui.web-clien-timeout]`

[.description]
--
The WebClient timeout. Use this property to configure how long an HTTP client used by Dev UI handlers will wait for a response when requesting tokens from OpenId Connect Provider and sending them to the service endpoint.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled[quarkus.oidc.default-token-cache-enabled]`

[.description]
--
Enable the registration of the Default TokenIntrospection and UserInfo Cache implementation bean. Note it only allows to use the default implementation, one needs to configure it in order to activate it, please see `OidcConfig++#++tokenCache`.
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant-options-grant-options]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant-options-grant-options[quarkus.oidc.devui.grant-options]`

[.description]
--
Grant options
--|`Map<String,Map<String,String>>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
