_generated-doc/2.16/config/quarkus-oidc-oidc-build-time-config.adoc

:summaryTableId: quarkus-oidc-oidc-build-time-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-oidc-build-time-config_configuration]]link:#quarkus-oidc-oidc-build-time-config_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.enabled]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.enabled[quarkus.oidc.enabled]`

[.description]
--
If the OIDC extension is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant.type[quarkus.oidc.devui.grant.type]`

[.description]
--
Grant type which will be used to acquire a token to test the OIDC 'service' applications

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEVUI_GRANT_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEVUI_GRANT_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
tooltip:client['client_credentials' grant], tooltip:password['password' grant], tooltip:code['authorization_code' grant], tooltip:implicit['implicit' grant] 
|


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-client-timeout]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.web-client-timeout[quarkus.oidc.devui.web-client-timeout]`

[.description]
--
The WebClient timeout. Use this property to configure how long an HTTP client used by Dev UI handlers will wait for a response when requesting tokens from OpenId Connect Provider and sending them to the service endpoint.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEVUI_WEB_CLIENT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEVUI_WEB_CLIENT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`4S`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.default-token-cache-enabled[quarkus.oidc.default-token-cache-enabled]`

[.description]
--
Enable the registration of the Default TokenIntrospection and UserInfo Cache implementation bean. Note it only allows to use the default implementation, one needs to configure it in order to activate it, please see `OidcConfig++#++tokenCache`.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEFAULT_TOKEN_CACHE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEFAULT_TOKEN_CACHE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant-options-grant-options]]`link:#quarkus-oidc-oidc-build-time-config_quarkus.oidc.devui.grant-options-grant-options[quarkus.oidc.devui.grant-options]`

[.description]
--
Grant options

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_DEVUI_GRANT_OPTIONS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_DEVUI_GRANT_OPTIONS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,Map<String,String>>` 
|

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
